@@ -23,6 +23,7 @@ The following bugs are resolved with this release:
   [27577] elf/ld.so --help doesn't work
   [27648] FAIL: misc/tst-select
   [27651] Performance regression after updating to 2.33
+  [27706] select fails to update timeout on error
 
 Version 2.33
 
